--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ECTRetrofit2</string>
     <string name="ex_post_title">Titulo de Post</string>
+    <string name="title_activity_comment">CommentActivity</string>
 </resources>
